Fixed landscape text on iPhone

--- a/src/css/_master.sass
+++ b/src/css/_master.sass
@@ -362,6 +362,7 @@ textarea
                 display: inline
                 
             a#destroy-abbr, a#today-abbr
+                line-height: 1.25em
                 display: none
                 
     #navigation
@@ -541,3 +542,7 @@ textarea
         
 //@media screen and (min-width: 733px) and (max-width: 960px)
 //@media screen and (min-width: 961px)
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px)
+    html
+        -webkit-text-size-adjust: none
